changed files by pdets auto publish service, publishid[42aa5bca-d5c8-402b-acbd-411877394a87] and do [publish].

--- a/learn-m365-pr/wwl/implement-sensitivity-labels/4-create-sensitivity-labels.yml
+++ b/learn-m365-pr/wwl/implement-sensitivity-labels/4-create-sensitivity-labels.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn.wwl.implement-sensitivity-labels.create-sensitivity-labels
+uid: learn.wwl.implement-sensitivity-labels.create
 title: Create sensitivity labels
 metadata:
   title: Create sensitivity labels
