--- a/learn-m365-pr/wwl/implement-sensitivity-labels/5-publish-sensitivity-labels.yml
+++ b/learn-m365-pr/wwl/implement-sensitivity-labels/5-publish-sensitivity-labels.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn.wwl.implement-sensitivity-labels.publish-sensitivity-labels
+uid: learn.wwl.implement-sensitivity-labels.publish
 title: Publish sensitivity labels
 metadata:
   title: Publish sensitivity labels
