--- a/learn-m365-pr/wwl/implement-sensitivity-labels/6-remove-delete-sensitivity-labels.yml
+++ b/learn-m365-pr/wwl/implement-sensitivity-labels/6-remove-delete-sensitivity-labels.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn.wwl.implement-sensitivity-labels.remove-delete-sensitivity-labels
+uid: learn.wwl.implement-sensitivity-labels.remove-delete
 title: Remove and delete sensitivity labels
 metadata:
   title: Remove and delete sensitivity labels
