--- a/learn-m365-pr/paths/manage-data-governance-microsoft-365/index.yml
+++ b/learn-m365-pr/paths/manage-data-governance-microsoft-365/index.yml
@@ -1,14 +1,14 @@
 ### YamlMime:LearningPath
 uid: learn.wwl.manage-data-governance-microsoft-365
 metadata:
-  title: Manage data governance in Microsoft 365
-  description: Manage data governance in Microsoft 365
-  ms.date: 06/23/2021
+  title: Manage compliance in Microsoft 365
+  description: Manage compliance in Microsoft 365
+  ms.date: 06/22/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
-title: Manage data governance in Microsoft 365
+title: Manage compliance in Microsoft 365
 prerequisites: |
   - Students should have completed a role-based administrator collection such as Messaging, Teamwork, Security and Compliance, or Collaboration.
   - Students should have a proficient understanding of DNS and basic functional experience with Microsoft 365 services.
@@ -24,18 +24,15 @@ roles:
 - solution-architect
 - technology-manager
 products:
-- azure-active-directory
 - m365
 - office-365
 subjects:
-- information-protection-governance
 - compliance
 - identity-access
+- information-protection-governance
 modules:
-- learn.wwl.manage-retention-email
-- learn.wwl.troubleshoot-data-governance
+- learn.wwl.implement-data-classification-of-sensitive-information
 - learn.wwl.explore-sensitivity-labels
 - learn.wwl.implement-sensitivity-labels
-- learn.wwl.implement-windows-information-protection
 trophy:
   uid: learn.wwl.manage-data-governance-microsoft-365.trophy
