changed files by pdets auto publish service, publishid[53d56b07-df7b-4e5b-bbd8-1e88c638da1e] and do [redirect].

--- a/learn-m365-pr/achievements.yml
+++ b/learn-m365-pr/achievements.yml
@@ -305,3 +305,13 @@ achievements:
   title: Implement policy tips for DLP policies
   summary: Implement policy tips for DLP policies
   iconUrl: /learn/achievements/dlp-policy-tips.svg
+- uid: learn.wwl.manage-retention-email.badge
+  type: badge
+  title: Manage retention in email
+  summary: Manage retention in email
+  iconUrl: /learn/achievements/exchange-retention.svg
+- uid: learn.wwl.troubleshoot-data-governance.badge
+  type: badge
+  title: Troubleshoot data governance
+  summary: Troubleshoot data governance
+  iconUrl: /learn/achievements/loss-prevention-troubleshoot.svg
