--- a/learn-m365-pr/m365/viva-goals-create-track-close-okrs/index.yml
+++ b/learn-m365-pr/m365/viva-goals-create-track-close-okrs/index.yml
@@ -10,15 +10,14 @@ metadata:
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Create, track, and close your OKRs with Viva Goals
-summary: Learn how to work with OKRs in Viva Goals.<br><br>**IMPORTANT** - Viva Goals is currently available only for preview customers, and only in English. The features described here are subject to change. [Learn more about Viva Goals.](https://go.microsoft.com/fwlink/?linkid=2189933)
+summary: Viva Connections is a customizable app experience in Microsoft Teams and is the gateway to modern employee experiences. Viva Connections incorporates curated content and tools from across your Microsoft 365 environment that connect your employees to tasks, organizational news, announcements, people, and resources. This module introduces the primary components of Viva Connections. <br><br>**IMPORTANT** - Viva Goals is currently available only for preview customers, and only in English. The features described here are subject to change. [Learn more about Viva Goals.](https://go.microsoft.com/fwlink/?linkid=2189933)
 abstract: |
   By the end of this module, you'll be able to:
-    - Navigate your way around Viva Goals
-    - Understand how Objectives, Key Results and Projects align within Viva Goals
-    - Create Objectives, Key Results and Projects
-    - See the different ways that progress can be tracked
-    - Close your OKRs at the end of the relevant time period
-    - Understand the different types of systems that can integrate with Viva Goals and their uses
+    - Describe the main features of Viva Connections
+    - List technical requirements/prerequisites for Viva Connections implementation
+    - Explain the differences between desktop and mobile experiences 
+    -	Identify 2-3 business use cases for Viva Connections 
+
 prerequisites: |
   - Access to an instance of Viva Goals
 iconUrl: /learn/achievements/generic-badge.svg
