--- a/learn-m365-pr/m365/viva-connections-plan/2-build-your-team-and-meet-requirements.yml
+++ b/learn-m365-pr/m365/viva-connections-plan/2-build-your-team-and-meet-requirements.yml
@@ -1,9 +1,9 @@
 ### YamlMime:ModuleUnit
-uid: learn.viva-connections-introduction.build-your-team-and-meet-requirements
-title: Build your team and meet requirements?
+uid: learn.viva-connections-plan.build-your-team-and-meet-requirements
+title: Build your team and meet requirements
 metadata:
   unitType: learning-content
-  title: learning-content
+  title: Build your team and meet requirements
   description: "TODO this field is for search engine optimization and is not user-visible; use 2-3 complete, grammatically correct sentences to describe the unit; include relevant search keywords."
   ms.date: 6/23/2022
   author: maggierui
