--- a/learn-m365-pr/m365/viva-connections-plan/3-analyze-tasks-and-scenarios-for-viva-connections.yml
+++ b/learn-m365-pr/m365/viva-connections-plan/3-analyze-tasks-and-scenarios-for-viva-connections.yml
@@ -1,9 +1,9 @@
 ### YamlMime:ModuleUnit
-uid: learn.viva-connections-introduction.analyze-tasks-and-scenarios-for-viva-connections
-title: Analyze tasks and scenarios for Viva Connections?
+uid: learn.viva-connections-plan.analyze-tasks-and-scenarios-for-viva-connections
+title: Analyze tasks and scenarios for Viva Connections
 metadata:
   unitType: exercise
-  title: exercise
+  title: Analyze tasks and scenarios for Viva Connections
   description: "TODO this field is for search engine optimization and is not user-visible; use 2-3 complete, grammatically correct sentences to describe the unit; include relevant search keywords."
   ms.date: 6/23/2022
   author: maggierui
