--- a/learn-m365-pr/m365/viva-connections-plan/5-plan-to-announce,-launch,-and-scale-adoption.yml
+++ b/learn-m365-pr/m365/viva-connections-plan/5-plan-to-announce,-launch,-and-scale-adoption.yml
@@ -1,9 +1,9 @@
 ### YamlMime:ModuleUnit
-uid: learn.viva-connections-introduction.plan-to-announce,-launch,-and-scale-adoption
+uid: learn.viva-connections-plan.plan-to-announce,-launch,-and-scale-adoption
 title: Plan to announce, launch, and scale adoption 
 metadata:
   unitType: learning-content
-  title: learning-content
+  title: Plan to announce, launch, and scale adoption
   description: "TODO this field is for search engine optimization and is not user-visible; use 2-3 complete, grammatically correct sentences to describe the unit; include relevant search keywords."
   ms.date: 6/23/2022
   author: maggierui
@@ -12,4 +12,4 @@ metadata:
   ms.prod: learning-m365
 durationInMinutes: 1
 content: |
-  [!include[](includes/4-plan-to-announce,-launch,-and-scale-adoption.md)]
+  [!include[](includes/5-plan-to-announce,-launch,-and-scale-adoption.md)]
