--- a/learn-m365-pr/m365/viva-connections-plan/index.yml
+++ b/learn-m365-pr/m365/viva-connections-plan/index.yml
@@ -1,22 +1,22 @@
 ### YamlMime:Module
-uid: learn.viva-connections-introduction
+uid: learn.viva-connections-plan
 metadata:
   moduleType: standard
-  title: Introduction to Viva Connections
-  description: Learn what is Viva Connections, what users experience with it, when to use Viva Connections, and its technical requirements. 
+  title: Plan for Viva Connections
+  description: Learn to build a team of stakeholders to plan for Viva Connections, how to conduct the needs assessment, how to plan for deployment and launch.
   ms.date: 6/23/2022
   author: maggierui
   ms.author: ruihu
   ms.topic: interactive-tutorial
   ms.prod: learning-m365 
-title: Introduction to Viva Connections
-summary: Viva Connections is a customizable app experience in Microsoft Teams and is the gateway to modern employee experiences. Viva Connections incorporates curated content and tools from across your Microsoft 365 environment that connect your employees to tasks, organizational news, announcements, people, and resources. This module introduces the primary components of Viva Connections. 
+title: Plan for Viva Connections
+summary: Thoughtful planning is the beginning of the successful deployment of Viva Connections. Most of the time spent getting Viva Connections ready for your organization will be in the planning phase. Planning involves building a team of stakeholders who will work together to prioritize scenarios and tasks that can be supported by Viva Connections. Once you’ve formed a planning team, you can get to work meeting requirements, planning scenarios, and a launch plan.
 abstract: |
   By the end of this module, you'll be able to:
-    - Describe the main features of Viva Connections
-    - List technical requirements/prerequisites for Viva Connections implementation
-    - Explain the differences between desktop and mobile experiences 
-    -	Identify 2-3 business use cases for Viva Connections
+    - Identify key stakeholders for the deployment of Viva Connections
+    - Align and prioritize scenarios for Viva Connections
+    - Plan and design for the Dashboard, the Feed, and Resources by scenarios and audiences 
+    -	Consider how your organization will scale adoption
 prerequisites: |
   - Access to an instance of Viva Connections
 iconUrl: /learn/achievements/generic-badge.svg
@@ -33,9 +33,9 @@ units:
 - learn.viva-connections-introduction.introduction
 - learn.viva-connections-introduction.build-your-team-and-meet-requirements
 - learn.viva-connections-introduction.analyze-tasks-and-scenarios-for-viva-connections
-- learn.viva-connections-introduction.plan-for-viva-connections-dashboard,-feed,-and-resources-
-- learn.viva-connections-introduction.plan-to-announce,-launch,-and-scale-adoption
-- learn.viva-connections-introduction.knowledge-check
-- learn.viva-connections-introduction.summary
+- learn.viva-connections-plan.plan-for-viva-connections-dashboard-feed-and-resources
+- learn.viva-connections-plan.plan-to-announce,-launch,-and-scale-adoption
+- learn.viva-connections-plan.knowledge-check
+- learn.viva-connections-plan.summary
 badge:
-  uid: learn.viva-connections-introduction.badge
+  uid: learn.viva-connections-plan.badge
