--- a/learn-m365-pr/m365/viva-connections-introduction/2-what-do-users-experience.yml
+++ b/learn-m365-pr/m365/viva-connections-introduction/2-what-do-users-experience.yml
@@ -9,7 +9,7 @@ metadata:
   author: maggierui
   ms.author: ruihu
   ms.topic: interactive-tutorial
-  ms.prod: learning-m365# Edit as appropriate for your portfolio area
+  ms.prod: learning-m365
 durationInMinutes: 1
 content: |
   [!include[](includes/2-what-do-users-experience.md)]
