--- a/learn-m365-pr/m365/viva-connections-set-up/1-introduction.yml
+++ b/learn-m365-pr/m365/viva-connections-set-up/1-introduction.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn.viva-connections-introduction.introduction
+uid: learn.viva-connections-set-up.introduction
 title: Introduction
 metadata:
   unitType: introduction
