--- a/learn-m365-pr/m365/viva-connections-set-up/5-set-up-resources.yml
+++ b/learn-m365-pr/m365/viva-connections-set-up/5-set-up-resources.yml
@@ -1,9 +1,9 @@
 ### YamlMime:ModuleUnit
-uid: learn.viva-connections-introduction.introduction
-title: Introduction
+uid: learn.viva-connections-set-up.set-up-resources
+title: Set up Resources 
 metadata:
-  unitType: introduction
-  title: introduction
+  unitType: learning-content
+  title: learning-content
   description: "TODO this field is for search engine optimization and is not user-visible; use 2-3 complete, grammatically correct sentences to describe the unit; include relevant search keywords."
   ms.date: 6/23/2022
   author: maggierui
@@ -12,4 +12,4 @@ metadata:
   ms.prod: learning-m365
 durationInMinutes: 1
 content: |
-  [!include[](includes/1-introduction.md)]
+  [!include[](includes/5-set-up-resources.md)]
