--- a/learn-m365-pr/m365/viva-connections-plan/1-introduction.yml
+++ b/learn-m365-pr/m365/viva-connections-plan/1-introduction.yml
@@ -4,7 +4,7 @@ title: Introduction
 metadata:
   unitType: introduction
   title: introduction
-  description: "TODO this field is for search engine optimization and is not user-visible; use 2-3 complete, grammatically correct sentences to describe the unit; include relevant search keywords."
+  description: Learn about best practices, considerations, and technical details to plan for Viva Connections Dashboard, Feed, and Resources.
   ms.date: 6/23/2022
   author: maggierui
   ms.author: ruihu
