--- a/learn-m365-pr/m365/viva-connections-plan/3-analyze-tasks-and-scenarios-for-viva-connections.yml
+++ b/learn-m365-pr/m365/viva-connections-plan/3-analyze-tasks-and-scenarios-for-viva-connections.yml
@@ -4,7 +4,7 @@ title: Analyze tasks and scenarios for Viva Connections
 metadata:
   unitType: exercise
   title: Analyze tasks and scenarios for Viva Connections
-  description: "TODO this field is for search engine optimization and is not user-visible; use 2-3 complete, grammatically correct sentences to describe the unit; include relevant search keywords."
+  description: Learn data sources, considerations, and best practices to conduct a needs assessment for Viva Connections with various departments, roles, and regions within your organization. 
   ms.date: 6/23/2022
   author: maggierui
   ms.author: ruihu
