--- a/learn-m365-pr/m365/viva-connections-plan/5-plan-to-announce-launch-and-scale-adoption.yml
+++ b/learn-m365-pr/m365/viva-connections-plan/5-plan-to-announce-launch-and-scale-adoption.yml
@@ -4,7 +4,7 @@ title: Plan to announce, launch, and scale adoption
 metadata:
   unitType: learning-content
   title: Plan to announce, launch, and scale adoption
-  description: "TODO this field is for search engine optimization and is not user-visible; use 2-3 complete, grammatically correct sentences to describe the unit; include relevant search keywords."
+  description: Learn best practices to announce, launce and scale adoption for Viva Connections.
   ms.date: 6/23/2022
   author: maggierui
   ms.author: ruihu
