--- a/learn-m365-pr/m365/viva-connections-plan/2-build-your-team-and-meet-requirements.yml
+++ b/learn-m365-pr/m365/viva-connections-plan/2-build-your-team-and-meet-requirements.yml
@@ -4,7 +4,7 @@ title: Build your team and meet requirements
 metadata:
   unitType: learning-content
   title: Build your team and meet requirements
-  description: "TODO this field is for search engine optimization and is not user-visible; use 2-3 complete, grammatically correct sentences to describe the unit; include relevant search keywords."
+  description: The first step of planning for Viva Connections is to identify the key stakeholders, which are people who will prioritize which tasks, tools, and resources should be streamlined and supported by Viva Connections. 
   ms.date: 6/23/2022
   author: maggierui
   ms.author: ruihu
