--- a/learn-m365-pr/m365/viva-connections-plan/4-plan-for-viva-connections-dashboard-feed-and-resources.yml
+++ b/learn-m365-pr/m365/viva-connections-plan/4-plan-for-viva-connections-dashboard-feed-and-resources.yml
@@ -1,9 +1,9 @@
 ### YamlMime:ModuleUnit
 uid: learn.viva-connections-plan.plan-for-viva-connections-dashboard-feed-and-resources
-title: Plan for viva connections dashboard, feed and resources 
+title: Plan for Viva Connections dashboard, feed and resources 
 metadata:
   unitType: learning-content
-  title: Plan for viva connections dashboard, feed and resources
+  title: Plan for Viva Connections dashboard, feed and resources
   description: Learn how to plan for Viva Connections Dashboard, Feed and Resources based on the scenarios and tasks found during the needs assessment.
   ms.date: 6/23/2022
   author: maggierui
