Fixd descriptions on all.

--- a/learn-m365-pr/m365/zero-trust-applications/index.yml
+++ b/learn-m365-pr/m365/zero-trust-applications/index.yml
@@ -3,7 +3,7 @@ uid: learn-m365.zero-trust-applications
 metadata:
   moduleType: standard
   title: zero-trust-applications
-  description: ""
+  description: In recent years, the Zero Trust concept has emerged as a go to security solution for the organizations big or small. The Zero trust approach is a combination of modern technologies and best practices that strengthens the security infrastructure within your organization.
   ms.date: 6/16/2022
   author: beccarobins
   ms.author: beccarobins
