--- a/learn-m365-pr/wwl/create-manage-teams/09-knowledge-check.yml
+++ b/learn-m365-pr/wwl/create-manage-teams/09-knowledge-check.yml
@@ -17,7 +17,7 @@ content: |
 quiz:
   title: "Check your knowledge"
   questions:
-  - content: "Jenifer is working as an IT administrator with the Contoso Ltd. She receives a request from the IT Manager to create a Org-wide team. Which of the following roles should be assigned to Jenifer for creating  organization-wide teams?"
+  - content: "Jenifer is working as an IT administrator with the Contoso Ltd. She receives a request from the IT Manager to create an Org-wide team. Which of the following roles should be assigned to Jenifer for creating  organization-wide teams?"
     choices:
     - content: "Teams administrator"
       isCorrect: false
@@ -28,7 +28,7 @@ quiz:
     - content: "Teams communications administrator"
       isCorrect: false
       explanation: "That's incorrect. Teams communications administrator can't create organization-wide teams."
-  - content: "Contoso Electronics recently acquired a mobile phone assembling plant. It has more than sixty percentage of temporary workforce both in the shop floor and administrative department. You, as a Teams administrator with Contoso Electronics, have been assigned the task to automate managing the membership in various Microsoft teams which the temporary employees are part of. You decide to use dynamic membership capability to automate the task. Which statement most accurately defines dynamic membership in Microsoft Teams?"
+  - content: "Contoso Electronics recently acquired a mobile phone assembling plant. It has more than sixty percentages of temporary workforce both in the shop floor and administrative department. You, as a Teams administrator with Contoso Electronics, have been assigned the task to automate managing the membership in various Microsoft Teams which the temporary employees are part of. You decide to use dynamic membership capability to automate the task. Which statement most accurately defines dynamic membership in Microsoft Teams?"
     choices:
     - content: "Users can add or remove themselves from teams according to their needs."
       isCorrect: false
@@ -50,7 +50,7 @@ quiz:
     - content: "Org-wide team"
       isCorrect: true
       explanation: "That's correct. An org-wide team includes all the users in the organization."
-  - content: "Alex is a Teams administrator with Contoso Logistics, a fleet operator. He receives a request from a business user who accidentally deleted one of the teams owned by him, to help recover the team and the associated SharePoint site. When a team has been accidentally deleted, the admin can recover the team by restoring the associated Microsoft 365 group during the soft-delete period. How long is a deleted Microsoft 365 Group been retained before permanently deleted?"
+  - content: "Alex is a Teams administrator with Contoso Logistics, a fleet operator. He receives a request from a business user who accidentally deleted one of the teams owned by him, to help recover the team and the associated SharePoint site. When a team has been accidentally deleted, the admin can recover the team by restoring the associated Microsoft 365 group during the soft-delete period. How long is a deleted Microsoft 365 group been retained before permanently deleted?"
     choices:
     - content: "14 days"
       isCorrect: false
