--- a/learn-m365-pr/wwl/create-manage-teams/09-knowledge-check.yml
+++ b/learn-m365-pr/wwl/create-manage-teams/09-knowledge-check.yml
@@ -28,7 +28,7 @@ quiz:
     - content: "Teams communications administrator"
       isCorrect: false
       explanation: "That's incorrect. Teams communications administrator can't create organization-wide teams."
-  - content: "Contoso Electronics recently acquired a mobile phone assembling plant. It has more than sixty percentages of temporary workforce both in the shop floor and administrative department. You, as a Teams administrator with Contoso Electronics, have been assigned the task to automate managing the membership in various Microsoft Teams which the temporary employees are part of. You decide to use dynamic membership capability to automate the task. Which statement most accurately defines dynamic membership in Microsoft Teams?"
+  - content: "Contoso Electronics recently acquired a mobile phone assembling plant. It has more than sixty percentages of temporary workforce both in the shop floor and administrative department. You, as a Teams administrator with Contoso Electronics, have been assigned the task to automate managing the membership in various Microsoft Teams that the temporary employees are part of. You decide to use dynamic membership capability to automate the task. Which statement most accurately defines dynamic membership in Microsoft Teams?"
     choices:
     - content: "Users can add or remove themselves from teams according to their needs."
       isCorrect: false
@@ -54,13 +54,13 @@ quiz:
     choices:
     - content: "14 days"
       isCorrect: false
-      explanation: "That's incorrect. A deleted Microsoft 365 group is not retained for 14 days.."
+      explanation: "That's incorrect. A deleted Microsoft 365 group isn't retained for 14 days.."
     - content: "30 days"
       isCorrect: true
       explanation: "That's correct. A deleted Microsoft 365 group is retained for 30 days."
     - content: "90 days"
       isCorrect: false
-      explanation: "That's incorrect. A deleted Microsoft 365 group is not retained for 90 days.."
+      explanation: "That's incorrect. A deleted Microsoft 365 group isn't retained for 90 days.."
   - content: "Which of the following permissions is only for team owners?"
     choices:
     - content: "Add a channel"
