--- a/learn-m365-pr/m365/viva-connections-plan/index.yml
+++ b/learn-m365-pr/m365/viva-connections-plan/index.yml
@@ -33,8 +33,8 @@ units:
 - learn.viva-connections-plan.build-your-team-and-meet-requirements
 - learn.viva-connections-plan.analyze-tasks-and-scenarios-for-viva-connections
 - learn.viva-connections-plan.plan-for-viva-connections-dashboard-feed-and-resources
-- learn.viva-connections-plan.plan-to-announce,-launch,-and-scale-adoption
 - learn.viva-connections-plan.knowledge-check
+- learn.viva-connections-plan.plan-to-announce-launch-and-scale-adoption
 - learn.viva-connections-plan.summary
 badge:
   uid: learn.viva-connections-plan.badge
