--- a/learn-m365-pr/wwl/search-for-content-security-compliance-center/5-export-search-results.yml
+++ b/learn-m365-pr/wwl/search-for-content-security-compliance-center/5-export-search-results.yml
@@ -4,12 +4,13 @@ title: Export the search results and search report
 metadata:
   title: Export the search results and search report
   description: "Export the search results and search report"
-  ms.date: 06/18/2021
+  ms.date: 06/30/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-azure
 azureSandbox: false
+labModal: false
 durationInMinutes: 8
 content: |
   [!include[](includes/5-export-search-results.md)]
@@ -20,10 +21,10 @@ quiz:
     choices:
     - content: "Disable anti-virus scanning for the folder that you download the search result to"
       isCorrect: true
-      explanation: "That's correct. Disabling anti-virus scanning on the folder to which you're downloading search results will help to optimize the download process."
+      explanation: "Correct. Disabling anti-virus scanning on the folder to which you're downloading search results will help to optimize the download process."
     - content: "Download search results to the same folder for concurrent download jobs"
       isCorrect: false
-      explanation: "That's incorrect. When downloading search results for concurrent download jobs, you should download the results to different folders. Try again."
+      explanation: "Incorrect. When downloading search results for concurrent download jobs, you should download the results to different folders."
     - content: "Download search results to a mapped network drive"
       isCorrect: false
-      explanation: "That's incorrect. Downloading search results to a mapped network drive can have an adverse affect on network traffic. Try again."
+      explanation: "Incorrect. Downloading search results to a mapped network drive can have an adverse affect on network traffic."
