--- a/learn-m365-pr/wwl/search-for-content-security-compliance-center/index.yml
+++ b/learn-m365-pr/wwl/search-for-content-security-compliance-center/index.yml
@@ -3,22 +3,21 @@ uid: learn.wwl.search-for-content-security-compliance-center
 metadata:
   title: Search for content in the Microsoft Purview compliance portal
   description: "Search for content in the Microsoft Purview compliance portal"
-  ms.date: 06/18/2021
+  ms.date: 06/30/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Search for content in the Microsoft Purview compliance portal
-summary: This module examines how to search for content in the Microsoft Purview compliance portal using Content Search functionality, manage the search results, and search for items from a third-party data source.
+summary: This module examines how to search for content in the Microsoft Purview compliance portal using Content Search functionality, including how to view and export the search results, and configure search permissions filtering.
 abstract: |
-  By the end of this module, you will be able to:
-  - Describe how to use content search in the Microsoft Purview compliance portal
-  - Design, create, and clone a content search
-  - Preview the search results
-  - View the search statistics
-  - Export the search results and search report
-  - Configure search permission filtering
-  - Explain how to search for items from a third-party data source
+  By the end of this module, you'll be able to:
+  - Describe how to use content search in the Microsoft Purview compliance portal.
+  - Design and create a content search.
+  - Preview the search results.
+  - View the search statistics.
+  - Export the search results and search report.
+  - Configure search permission filtering.
 prerequisites: ""
 iconUrl: /learn/achievements/m365-content-compliance.svg
 levels:
@@ -29,19 +28,20 @@ roles:
 - solution-architect
 - technology-manager
 products:
-- azure-active-directory
 - m365
 - office-365
 subjects:
+- cloud-computing
 - compliance
+- information-protection-governance
 units:
 - learn.wwl.search-for-content-security-compliance-center.introduction
-- learn.wwl.search-for-content-security-compliance-center.explore-content-search-functionality
-- learn.wwl.search-for-content-security-compliance-center.design-create-clone-content-search
+- learn.wwl.search-for-content-security-compliance-center.explore-ediscovery-solutions
+- learn.wwl.search-for-content-security-compliance-center.create-content-search
 - learn.wwl.search-for-content-security-compliance-center.view-search-results
 - learn.wwl.search-for-content-security-compliance-center.export-search-results
 - learn.wwl.search-for-content-security-compliance-center.configure-search-permissions-filtering
-- learn.wwl.search-for-content-security-compliance-center.items-from-third-party-data-source
+- learn.wwl.search-for-content-security-compliance-center.search-delete-email-messages
 - learn.wwl.search-for-content-security-compliance-center.knowledge-check
 - learn.wwl.search-for-content-security-compliance-center.summary
 badge:
